--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DFAs, NFAs, PDAs, CFGs, BLTs, and more.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha -r ts-node/register ./test/*.test.ts" 
+    "test": "./node_modules/.bin/mocha -r ts-node/register ./test/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,13 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.11.6",
+    "@types/node": "^11.11.7",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "mocha": "^6.0.2",
     "ts-node": "^8.0.3",
+    "tslint": "^5.14.0",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
