--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.11.7",
+    "browserify": "^16.2.3",
     "chai": "^4.2.0",
+    "factor-bundle": "^2.5.0",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.1",
     "mocha": "^6.0.2",
     "ts-node": "^8.0.3",
+    "tsify": "^4.0.1",
     "tslint": "^5.14.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "@types/jquery": "^3.3.29",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7"
